# PSUMAA

./: .gitignore  CMakeLists.txt  HeuristicaConstrutiva.cpp  HeuristicaConstrutiva.h  Job.cpp  Job.h  Populacao.cpp  Populacao.h  Problema.cpp  Problema.h  README.md  Solucao.cpp  Solucao.h  Tarefa.cpp  Tarefa.h  TempoSetup.cpp  TempoSetup.h  main.cpp
